pod-security/subrule/restricted/restricted-latest/.kyverno-test/resource.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: container01
      image: nginx:1.1.9
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        capabilities:
          drop:
            - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: container01
      image: busybox:1.28
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
