pod-security/subrule/restricted/restricted-latest/.kyverno-test/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restricted-latest
policies:
  - ../restricted-latest.yaml
resources:
  - resource.yaml
results:
  - kind: Pod
    policy: podsecurity-subrule-restricted
    resources:
      - badpod01
    result: fail
    rule: restricted
  - kind: Pod
    policy: podsecurity-subrule-restricted
    resources:
      - goodpod01
    result: pass
    rule: restricted
